--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://yourprofile1.com">Mateusz Jaszczuk</a>,
+              <a href="https://yourprofile1.com">First Author</a>,
             </span>
             <span class="author-block">
               <a href="https://yourprofile2.com">Second Author</a>
