--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
 <section class="section">
-  <div class="container is-max-desktop">
+  <div class="has-background-light">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
