--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
 <section class="section">
-  <div class="has-background-light">
+  <div class="hero is-light is-small">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -307,11 +307,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{add_title,
+  author    = {Author #1, Author #2},
+  title     = {Add title},
+  journal   = {add journal},
+  year      = {add jear},
 }</code></pre>
   </div>
 </section>
