--- a/index.html
+++ b/index.html
@@ -116,37 +116,28 @@
   </div>
 </section>
 
-<section class="section">
-  <div class="hero is-light is-small">
-    <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
-          <p>
-            Update Abstract
-          </p>
-          <p>
-            Update Abstract
-          </p>
+<section class="hero is-light is-medium">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <!-- Abstract -->
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">Abstract</h2>
+          <div class="content has-text-justified">
+            <p>
+              Update Abstract
+            </p>
+            <p>
+              Update Abstract
+            </p>
+          </div>
         </div>
       </div>
+      <!--/ Abstract -->
     </div>
-    <!--/ Abstract. -->
-
-    <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <!--/ Paper video. -->
   </div>
 </section>
+
 
 
 <section class="section">
