--- a/index.html
+++ b/index.html
@@ -240,11 +240,10 @@
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
           <p>
-            This means you are free to borrow the <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a> of this website,
-            we just ask that you link back to this page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
+            This page was built using the <a
+              href="https://github.com/eliahuhorwitz/Academic-project-page-template">Academic Project Page Template</a> which was adopted from the <a
+              href="https://nerfies.github.io">Nerfies</a> project page. 
+            You are free to borrow the source code of this website, we just ask that you link back to this page in the footer.
           </p>
         </div>
       </div>
