--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </section>
 
 <section class="hero is-light is-medium">
-  <div class="hero-body">
+  <div class="hero-body pt-3">
     <div class="container is-max-desktop">
       <!-- Abstract -->
       <div class="columns is-centered has-text-centered">
