--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
   <div class="container is-max-desktop">
 
     <div class="columns is-centered">
-    <h2 class="title is-3">Visual Effects</h2>
+    <h2 class="title is-3">Related Links</h2>
       <!-- Visual Effects. -->
       <div class="column">
         <div class="content">
-          <h2 class="title is-3">Visual Effects</h2>
+          <h2 class="title is-3">gggg Effects</h2>
           <p>
             Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
             would be impossible without nerfies since it would require going through a wall.
